# DATAPIPELINE-PETFINS

./: .gitignore  README.md  docker-compose.yaml  mlflow_api.py  unzip-docker-compose.sh  webhook.py  zip-docker-compose.sh
.github/: build.yaml
.github/workflows/: build.yaml  upload.yaml
backend/: Dockerfile  db_client.py  main.py  preprocess.py  retrieve.py  summarize.py  utils.py
dashboard/: Dockerfile
eda/: explore_data.py
infrastructure/: volume.yaml
infrastructure/dashboard/: dashboard.yaml
infrastructure/db/: postgres.yaml
infrastructure/mlflow/: mlflow.yaml
infrastructure/mlserver/: mlserver.yaml  namespace.yaml
infrastructure/pipeline/: pipeline.yaml
mlflow/: Dockerfile
mlserver/: main.py
pipeline/: Dockerfile  export.py  main.py
pipeline/hydra/: base.yaml
pipeline/src/: utils.py
pipeline/src/dataset/: data_manager.py  schema.py
pipeline/src/jobs/: predict.py  retrieve.py  summarize.py  train.py
pipeline/src/middleware/: apm.py  exception.py  logger.py
pipeline/src/models/: base_model.py  light_gbm_regression.py  models.py  preprocess.py
pipeline/tests/e2e/: test_mlserver.py
scheduler/: main.py  pyproject.toml
시험인증/: Dockerfile  jupyter_notebook_config.py
